# whakoom-webscrapper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  scrapy.cfg
.code_quality/: .flake8  .pylintrc  mypy.ini  pyproject_black.toml
.opencode/plans/: fix-status-updates.md  publications-db-integration.md
docs/: architecture.md  getting-started.md
docs/database/: migrations-guide.md  queries-reference.md  schema.md  sqlmanager-guide.md
docs/workflows/: list-spider-workflow.md  publications-spider-workflow.md  scraping-flow.md  title-spider-workflow.md
whakoom_webscrapper/: __init__.py  items.py  middlewares.py  models.py  pipelines.py  settings.py  sqlmanager.py
whakoom_webscrapper/configs/: __init__.py  configs.py
whakoom_webscrapper/migrations/: 001_initial_schema.sql  002_remove_volumes_and_add_is_single_volume.sql  __init__.py
whakoom_webscrapper/models/: __init__.py
whakoom_webscrapper/queries/: lists.sql  titles.sql
whakoom_webscrapper/spiders/: __init__.py  lists.py  publications.py  pubs.py  sho_comic.py
