[tool.poetry]
name = "whakoom-webscrapper"
version = "0.0.1"
description = "This repo is a Webscrapper for whakoom lists"
authors = ["Randy Consuegra <rsconsuegra95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
scrapy = "^2.11.1"
scrapy-splash = "^0.9.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.6"
pylint = "^3.1.0"
bandit = "^1.7.8"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
black = "^24.4.0"
ruff = "^0.4.1"
colorlog = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
