[project]
name = "whakoom-webscrapper"
version = "0.0.1"
description = "This repo is a Webscrapper for whakoom lists"
authors = [{ name = "Randy Consuegra", email = "rsconsuegra95@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.31.0,<3",
    "beautifulsoup4>=4.12.3,<5",
    "scrapy>=2.11.1,<3",
    "scrapy-splash>=0.9.0,<0.10",
    "selenium>=4.39.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.1.6,<5",
    "pylint>=3.1.0,<4",
    "bandit>=1.7.8,<2",
    "flake8>=7.0.0,<8",
    "pre-commit>=3.7.0,<4",
    "black>=24.4.0,<25",
    "ruff>=0.4.1,<0.5",
    "colorlog>=6.8.2,<7",
    "commitizen>=4.11.6",
]
